# db-systems-project

./: .gitignore  docker-compose.yml  pyproject.toml
report/: analysis.tex  conceptual-design.tex  front.tex  logical-design.tex  main.tex  physical-design.tex  pysical-design-possible-analysis.tex  use-case.tex  webapp.tex
report/rsc/: er-schema.drawio  schema.drawio
sql/: main.sql  operations-plans.sql  operations.sql  populate.sql  procedures.sql  script.sql  setup.sql  teardown.sql  users.sql
src/db-project/: app.py
src/db-project/templates/: customer_dashboard.html  index.html  login.html  manager_dashboard.html  top_locations.html  view_teams.html
